[gd_scene load_steps=53 format=3 uid="uid://bmgfabx2nd453"]

[ext_resource type="Script" uid="uid://cdghhlwd28ukr" path="res://scenes/busstop.gd" id="1_eru8g"]
[ext_resource type="PackedScene" uid="uid://btamyw4txrvit" path="res://scenes/player.tscn" id="1_hr2fb"]
[ext_resource type="PackedScene" uid="uid://qwkk3jryklca" path="res://scenes/fade_in_sun.tscn" id="2_c4wk2"]
[ext_resource type="Texture2D" uid="uid://bjo2dkt8vylyj" path="res://sprites/bus stop.png" id="2_xjad6"]
[ext_resource type="Texture2D" uid="uid://b873x43mf2o1j" path="res://sprites/bg.png" id="3_eru8g"]
[ext_resource type="PackedScene" uid="uid://bjlwfjxkywprp" path="res://scenes/scene_transition_animation.tscn" id="6_4jjng"]
[ext_resource type="Texture2D" uid="uid://3t3si3hpdqo1" path="res://sprites/bus zoom.png" id="6_c4wk2"]
[ext_resource type="Script" uid="uid://dkhhghrpcm1dp" path="res://scenes/zoom_in_1.gd" id="7_0ectm"]
[ext_resource type="Script" uid="uid://bsdc6xfm3cglh" path="res://scripts/canvas_layer.gd" id="8_7q8y5"]
[ext_resource type="FontFile" uid="uid://oat1w7uvyamo" path="res://fonts/Special_Elite/SpecialElite-Regular.ttf" id="9_xrhou"]
[ext_resource type="Texture2D" uid="uid://b0as0v1oa04x" path="res://sprites/rain.png" id="12_vca46"]
[ext_resource type="PackedScene" uid="uid://cb1mvlw5mwov2" path="res://scenes/item_status_bar.tscn" id="13_7q8y5"]
[ext_resource type="PackedScene" uid="uid://b7j53rnva35n1" path="res://scenes/umbrella_status_bar.tscn" id="17_tgyys"]
[ext_resource type="Texture2D" uid="uid://cqij6sovlfht7" path="res://sprites/bg - Copy.png" id="18_vltqg"]
[ext_resource type="Shader" uid="uid://cfqty0llnstyd" path="res://shaders/magnifying_effect.gdshader" id="19_0ectm"]
[ext_resource type="Texture2D" uid="uid://d14ufs6o88df7" path="res://sprites/floor.png" id="19_c4wk2"]
[ext_resource type="Texture2D" uid="uid://ceigpsw10a4o1" path="res://sprites/mask.png" id="20_jdo7k"]
[ext_resource type="Texture2D" uid="uid://xv3227dry16r" path="res://sprites/fall4.png" id="21_0ectm"]
[ext_resource type="Texture2D" uid="uid://j6jiilvqjl5h" path="res://sprites/bug.png" id="21_fa3ud"]
[ext_resource type="Script" uid="uid://mjuk7v8m5e1d" path="res://scenes/end_game_area.gd" id="21_jdo7k"]
[ext_resource type="Script" uid="uid://ds22jamt4cmms" path="res://scenes/buggy.gd" id="21_v6hpi"]
[ext_resource type="Script" uid="uid://bnro6klm0i0pr" path="res://scripts/magnifying_effect.gd" id="21_vwwwb"]
[ext_resource type="AudioStream" uid="uid://38w4yx4fgsk5" path="res://Music/magic-244951.mp3" id="23_0dugy"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_4jjng"]
distance = 3.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_l05rq"]
distance = -64.25195

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_324qj"]
normal = Vector2(-1, 0)
distance = 205.5

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0ectm"]
normal = Vector2(0.9999946, 0.003300312)
distance = -94.247665

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jdo7k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjad6"]
size = Vector2(141, 274.75)

[sub_resource type="AtlasTexture" id="AtlasTexture_7q8y5"]
atlas = ExtResource("12_vca46")
region = Rect2(0, 0, 3508, 2480)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrhou"]
atlas = ExtResource("12_vca46")
region = Rect2(3508, 0, 3508, 2480)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rqqc"]
atlas = ExtResource("12_vca46")
region = Rect2(7016, 0, 3508, 2480)

[sub_resource type="SpriteFrames" id="SpriteFrames_fl7oo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7q8y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrhou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rqqc")
}],
"loop": true,
"name": &"rain",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ectm"]
size = Vector2(399, 233)

[sub_resource type="SpriteFrames" id="SpriteFrames_jdo7k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_0ectm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_vwwwb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/RichTextLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/RichTextLabel:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Are you alright...?"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/RichTextLabel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 7.929515)]
}

[sub_resource type="Animation" id="Animation_jdo7k"]
resource_name = "end_animation"
length = 14.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/RichTextLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 4.5, 7.5, 9, 13),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/RichTextLabel:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.5, 9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["Are you alright...?", "Hard day…? I understand…", "Here, I have something that might help…"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/RichTextLabel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(8.133333, 8.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 7.929515), Vector2(-118.061676, 7.929515)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fa3ud"]
_data = {
&"RESET": SubResource("Animation_vwwwb"),
&"end_animation": SubResource("Animation_jdo7k")
}

[sub_resource type="Animation" id="Animation_vltqg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player/PointLight2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_c8xaa"]
resource_name = "colorglow"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player/PointLight2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.06666667, 15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.99607843, 0.9098039, 0.25882354, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4wk2"]
_data = {
&"RESET": SubResource("Animation_vltqg"),
&"colorglow": SubResource("Animation_c8xaa")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fa3ud"]
shader = ExtResource("19_0ectm")
shader_parameter/magnification = 4.000000142499999

[sub_resource type="Animation" id="Animation_fa3ud"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Background/Rain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Background/Rain2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Background/Rain3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0ectm"]
resource_name = "rain_end"
length = 9.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Background/Rain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Background/Rain2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Background/Rain3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v6hpi"]
_data = {
&"RESET": SubResource("Animation_fa3ud"),
&"rain_end": SubResource("Animation_0ectm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6hpi"]
size = Vector2(219.5, 204)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0dugy"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_mnji4"]
offsets = PackedFloat32Array(0.04605263, 0.35526314, 0.5131579, 0.7368421)
colors = PackedColorArray(1, 0.8666667, 0.06666667, 1, 0.75238097, 0.6520635, 0.05015873, 1, 0.41168013, 0.35678944, 0.027445344, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l4fe5"]
gradient = SubResource("Gradient_mnji4")
width = 200
height = 200
fill = 1
fill_from = Vector2(0.5, 0.4861111)

[sub_resource type="Gradient" id="Gradient_17bg8"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6m1gb"]
gradient = SubResource("Gradient_17bg8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8x485"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_6m1gb")

[node name="bus stop" type="Node2D"]
position = Vector2(-3348, -584)
script = ExtResource("1_eru8g")

[node name="fade in sun" parent="." instance=ExtResource("2_c4wk2")]
z_as_relative = false

[node name="BgSun" parent="fade in sun" index="0"]
z_index = 0
position = Vector2(922, -343)

[node name="BgSunCopy" parent="fade in sun" index="1"]
z_index = 1
position = Vector2(4288, -344)

[node name="player" parent="." instance=ExtResource("1_hr2fb")]
z_index = 2
position = Vector2(75, 121)
collision_mask = 2
max_zoom = 9.0

[node name="boundaries" type="StaticBody2D" parent="."]
position = Vector2(-352, 110)
scale = Vector2(4, 4)
collision_layer = 2

[node name="bottom boundary" type="CollisionShape2D" parent="boundaries"]
position = Vector2(-2, 10)
shape = SubResource("WorldBoundaryShape2D_4jjng")

[node name="left boundary" type="CollisionShape2D" parent="boundaries"]
position = Vector2(-103, -37.75)
rotation = 1.5782
shape = SubResource("WorldBoundaryShape2D_l05rq")

[node name="right boundary" type="CollisionShape2D" parent="boundaries"]
position = Vector2(578.25, -45.75)
shape = SubResource("WorldBoundaryShape2D_324qj")

[node name="endbound" type="CollisionShape2D" parent="boundaries"]
rotation = 0.00015999831
shape = SubResource("WorldBoundaryShape2D_0ectm")

[node name="past stranger" type="CollisionShape2D" parent="boundaries"]
position = Vector2(995.5, -5)
rotation = -1.5971301
shape = SubResource("WorldBoundaryShape2D_jdo7k")

[node name="InsideDetect" type="Area2D" parent="."]
position = Vector2(-240, -2)
scale = Vector2(4, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InsideDetect"]
position = Vector2(-244.5, -74.75)
shape = SubResource("RectangleShape2D_xjad6")

[node name="CanvasLayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("timer")]
scale = Vector2(1.135, 1.135)
transform = Transform2D(1.135, 0, 0, 1.135, 0, 0)
script = ExtResource("8_7q8y5")
timer = NodePath("Timer")

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = -1.457067
anchor_top = -1.299
anchor_right = -1.457067
anchor_bottom = -1.299
offset_left = 1742.4619
offset_top = 898.13965
offset_right = 2612.462
offset_bottom = 1008.1398
theme_override_fonts/font = ExtResource("9_xrhou")
theme_override_font_sizes/font_size = 33
text = "text here..."
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 3.0
one_shot = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
z_index = 3
offset_top = 7.929515
offset_right = 1014.9779
offset_bottom = 91.62995
theme_override_fonts/normal_font = ExtResource("9_xrhou")
theme_override_font_sizes/normal_font_size = 33
text = "Are you alright...?"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ZoomIn7" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(510.13214, 320.70483)
scale = Vector2(0.38951355, 0.3895137)
texture = ExtResource("6_c4wk2")
script = ExtResource("7_0ectm")

[node name="Background" type="Node" parent="."]

[node name="BusStop" type="Sprite2D" parent="Background"]
position = Vector2(-2422, -869)
texture = ExtResource("2_xjad6")

[node name="Bg" type="Sprite2D" parent="Background"]
z_index = -1
position = Vector2(-2418, -922)
texture = ExtResource("3_eru8g")

[node name="Rain" type="AnimatedSprite2D" parent="Background"]
z_index = 3
position = Vector2(-2951.9194, -1007.375)
scale = Vector2(0.75292325, 0.75292337)
sprite_frames = SubResource("SpriteFrames_fl7oo")
animation = &"rain"
frame_progress = 0.40694404

[node name="Rain2" type="AnimatedSprite2D" parent="Background"]
z_index = 3
position = Vector2(-503.00024, -1001.00006)
scale = Vector2(0.75292325, 0.75292337)
sprite_frames = SubResource("SpriteFrames_fl7oo")
animation = &"rain"
frame_progress = 0.40694404

[node name="Rain3" type="AnimatedSprite2D" parent="Background"]
z_index = 3
position = Vector2(1916.9999, -1012)
scale = Vector2(0.75292325, 0.75292337)
sprite_frames = SubResource("SpriteFrames_fl7oo")
animation = &"rain"
frame_progress = 0.40694404

[node name="BgCopy" type="Sprite2D" parent="Background"]
position = Vector2(940, -923)
texture = ExtResource("18_vltqg")

[node name="Floor" type="Sprite2D" parent="Background"]
z_index = 1
position = Vector2(-43, -869)
texture = ExtResource("19_c4wk2")

[node name="floor" type="Polygon2D" parent="Background"]
z_index = 1
position = Vector2(-6804.995, -930.0342)
rotation = 0.0014689598
scale = Vector2(23.134878, 17.181967)
color = Color(0.3019608, 0.3019608, 0.3019608, 1)
polygon = PackedVector2Array(74.29367, 30.817776, 235.45264, 32.00006, 320.49844, 27.304373, 407.51022, 27.481476, 418.70642, 28.390541, 514.9662, 63.058002, 74.764084, 65.79542)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(-643, -467)
color = Color(0.50534403, 0.5053441, 0.50534385, 1)

[node name="SceneTransitionAnimation" parent="." instance=ExtResource("6_4jjng")]

[node name="ColorRect" parent="SceneTransitionAnimation" index="0"]
z_index = 3

[node name="ItemStatusBar" parent="." instance=ExtResource("13_7q8y5")]
layer = 0

[node name="UmbrellaStatusBar" parent="." instance=ExtResource("17_tgyys")]
layer = 0

[node name="End Game Area" type="Area2D" parent="."]
script = ExtResource("21_jdo7k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="End Game Area"]
z_index = 1
position = Vector2(3319.5, 65.5)
shape = SubResource("RectangleShape2D_0ectm")

[node name="Stranger3" type="AnimatedSprite2D" parent="End Game Area/CollisionShape2D"]
z_index = 1
position = Vector2(19.5, 26.5)
rotation = -1.4364059
sprite_frames = SubResource("SpriteFrames_jdo7k")
flip_h = true

[node name="endgame" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fa3ud")
}

[node name="end color" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c4wk2")
}

[node name="MagnifyingEffect" type="Sprite2D" parent="."]
visible = false
z_index = 100
material = SubResource("ShaderMaterial_fa3ud")
position = Vector2(-2517.5, -825.5)
scale = Vector2(0.4033203, 0.4033203)
texture = ExtResource("20_jdo7k")
script = ExtResource("21_vwwwb")

[node name="rain end" type="AnimationPlayer" parent="."]
root_node = NodePath("../end color")
libraries = {
&"": SubResource("AnimationLibrary_v6hpi")
}

[node name="Findable" type="Node" parent="."]

[node name="buggy" type="Area2D" parent="Findable"]
script = ExtResource("21_v6hpi")
message_text = "Hey, little buddy...!"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Findable/buggy"]
position = Vector2(-3361, -720)
shape = SubResource("RectangleShape2D_v6hpi")

[node name="ladybug" type="Sprite2D" parent="Findable/buggy/CollisionShape2D"]
visible = false
position = Vector2(-15.000244, -26)
scale = Vector2(0.13934427, 0.13934426)
texture = ExtResource("21_fa3ud")

[node name="bug find glow" type="GPUParticles2D" parent="Findable/buggy/CollisionShape2D"]
visible = false
z_index = 1
z_as_relative = false
material = SubResource("CanvasItemMaterial_0dugy")
position = Vector2(-7, -9)
amount = 1
texture = SubResource("GradientTexture2D_l4fe5")
lifetime = 2.6799999999999997
process_material = SubResource("ParticleProcessMaterial_8x485")

[node name="magic" type="AudioStreamPlayer" parent="Findable"]
stream = ExtResource("23_0dugy")

[connection signal="body_entered" from="InsideDetect" to="." method="_on_inside_detect_body_entered"]
[connection signal="body_exited" from="InsideDetect" to="." method="_on_inside_detect_body_exited"]
[connection signal="mouse_entered" from="End Game Area" to="End Game Area" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="End Game Area" to="End Game Area" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Findable/buggy" to="Findable/buggy" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Findable/buggy" to="Findable/buggy" method="_on_mouse_exited"]

[editable path="fade in sun"]
[editable path="player"]
[editable path="SceneTransitionAnimation"]
